--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         </div>
       </section>
 
-      <section class="gifts">
+      <section class="section gifts">
         <div class="container">
-          <h2 class="gifts-title">Gifts for all Occasions</h2>
-          <p class="gifts-desc">“Try our web app to find the best gifts for all occasions”</p>
+          <h2 class="section-title gifts-title">Gifts for all Occasions</h2>
+          <p class="section-subtitle gifts-desc">“Try our web app to find the best gifts for all occasions”</p>
           <ul class="gifts-list">
             <li class="gifts-item">
               <img src="./images/gifts/1.jpg" alt="Birthday" />
@@ -73,6 +73,37 @@
               <a href="#">See More ›</a>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="section blogs">
+        <div class="container">
+          <h2 class="section-title">Our Best Blogs Ever</h2>
+          <p class="section-subtitle">“Try our blog to find the best tips and tricks to select your gift”</p>
+          <div class="blogs__list">
+            <article class="blogs__list-item blogs__top">
+              <img src="./images/blogs_top.jpg" width="400" height="370" alt="The best way to wish your wife" />
+              <div class="blogs__top-text">
+                <span class="author blogs-author">Mr. John Doe</span>
+                <h3 class="blogs__top-title">The best way to wish your wife</h3>
+                <a href="#" class="blogs-link">Read More</a>
+              </div>
+            </article>
+            <article class="blogs__list-item">
+              <div class="blogs__top-text">
+                <h3 class="blogs__top-title">The best way to wish your wife</h3>
+                <p class="blogs-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+                <a href="#" class="blogs-link">Read More</a>
+              </div>
+            </article>
+            <article class="blogs__list-item">
+              <div class="blogs__top-text">
+                <h3 class="blogs__top-title">The best way to wish your wife</h3>
+                <p class="blogs-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+                <a href="#" class="blogs-link">Read More</a>
+              </div>
+            </article>
+          </div>
         </div>
       </section>
     </main>
